--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -51,13 +51,33 @@ Date 2 & 1.1 & Notes\\
 
 \renewcommand{\arraystretch}{1.2}
 \begin{tabular}{l l} 
-  \toprule		
-  \textbf{symbol} & \textbf{description}\\
-  \midrule 
-  T & Test\\
-  \bottomrule
-\end{tabular}\\
+	  \toprule		
+		  \textbf{Symbol} & \textbf{Description}\\
+		  \midrule 
+		  DT 						& Duration Test\\
+		  MTT 					& Minor Tracking Test\\
+		  PT 						& Prompt Test\\
+		  TT 						& Threshold Test\\
+		  DST 					& Data Storage Test\\
+		  DXT 					& Data Extraction Test\\
+		  HC\#					& Hardware Constraint \#\\ 
+	  \bottomrule
+\end{tabular}\\\\
 
+\begin{flushleft} 
+	\begin{tabular}{l l} 
+		  \toprule		
+			  \textbf{Error} & \textbf{Description}\\
+			  \midrule 
+			  BED\_ERR\_NONE 					& Represents no errors\\
+			  BED\_ERR\_INVALID\_DATA			& Represents invalid data being used/stored\\
+			  BED\_ERR\_INVALID\_DATA\_SIZE 		& Represents insufficient size for data storage\\
+			  BED\_ERR\_OUT\_OF\_BOUNDS 		& Represents value of data past allowable limits\\
+			  BED\_ERR\_MEMORY\_FULL 			& Represents full internal memory buffer\\
+	
+		  \bottomrule
+	\end{tabular}\\
+\end{flushleft} 
 \wss{symbols, abbreviations or acronyms --- you can simply reference the SRS
   \citep{SRS} tables, if appropriate}
 
@@ -184,7 +204,7 @@ inspection?}
   table in the SRS.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Device should stay on during the monitoring period - \textbf{R1}}
+\subsubsection{Device should stay on during the monitoring period}
 
 The following tests will check the whether the device will maintain an "ON" state throughout the duration of the monitoring period. The primary tests will involve different monitoring periods with valid inputs, invalid inputs, dates from the past or too far into the future beyond what the battery life can sustain (HC2).
 		
@@ -192,8 +212,8 @@ The following tests will check the whether the device will maintain an "ON" stat
 
 \begin{enumerate}
 
-	\item{\textbf{DT\_1: Regular Inputs}\\}
-	
+	\item{\textbf{DT\_1: Regular Inputs}\\}\label{DT1}
+		
 		Control: Manual 
 							
 		Initial State: Device waits for the monitoring period to be set up in the configuration of the device.
@@ -201,12 +221,10 @@ The following tests will check the whether the device will maintain an "ON" stat
 		Input: Monitoring Period ["Date","Time"]  : ["03-11-2022", "05:30:PM"].
 		
 		Output: Device turns off after Monitoring Period.
-		
-		Test Case Derivation: N/A.
 							
 		How test will be performed: The test is performed by passing in the Monitoring Period and ensuring that the device maintains power throughout this period.
 					
-	\item{\textbf{DT\_2: Invalid Inputs}\\}
+	\item{\textbf{DT\_2: Invalid Inputs}\\}\label{DT2}
 	
 		Control: Manual 
 							
@@ -216,11 +234,9 @@ The following tests will check the whether the device will maintain an "ON" stat
 							
 		Output: Device returns an error code to the Error Handler and asserts the Invalid Data Error (BED\_ERR\_INVALID\_DATA).
 		
-		Test Case Derivation: Every Function returns an error code.
-		
 		How test will be performed: The test is performed by passing an invalid input and ensuring the appropriate error code is returned.
 
-	\item{\textbf{DT\_2: Earlier Date}\\}
+	\item{\textbf{DT\_3: Earlier Date}\\}\label{DT3}
 		
 		Control: Manual 
 							
@@ -230,11 +246,9 @@ The following tests will check the whether the device will maintain an "ON" stat
 							
 		Output: Device returns an error code to the Error Handler and asserts the Invalid Data Error (BED\_ERR\_INVALID\_DATA).
 		
-		Test Case Derivation: Every Function returns an error code.
-		
 		How test will be performed: The test is performed by passing an old date (prior to current date).
 
-	\item{\textbf{DT\_3: Date beyond capabilities}\\}
+	\item{\textbf{DT\_4: Date beyond capabilities}\\}\label{DT4}
 		
 		Control: Manual 
 							
@@ -243,20 +257,18 @@ The following tests will check the whether the device will maintain an "ON" stat
 		Input: Monitoring Period ["Date","Time"] : ["9-12-2300", "05:30:PM"].
 							
 		Output: Device returns an error code to the Error Handler and asserts the Invalid Data Error (BED\_ERR\_INVALID\_DATA).
-		
-		Test Case Derivation: Every Function returns an error code.
-		
+
 		How test will be performed: The test is performed by passing a date greater than what the battery life of the device can support.
 
 \end{enumerate}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsubsection{Device should track Minor Movements - \textbf{R2}}
+\subsubsection{Device should track Minor Movements}
 The following tests are run to ensure that the device is able to track activities to a resolution deemed sufficient for general activity tracking. Tests will involve varying the rate at which the device is moved,rotated oriented etc. and checking if the status of the Sensors is valid.
 
 \paragraph{Minor Tracking Test}
 \begin{enumerate}
-	\item{\textbf{MTT\_1: Regular Movement} \\}
+	\item{\textbf{MTT\_1: Regular Movement} \\}\label{MTT1}
 	
 		Control: Manual 
 							
@@ -265,12 +277,10 @@ The following tests are run to ensure that the device is able to track activitie
 		Input: Wearer performs activities at a regular/normal pace.
 		
 		Output: Status returned by the Sensor Array is no error (BED\_ERR\_NONE).
-		
-		Test Case Derivation: N/A.
-							
+
 		How test will be performed: The test is performed by strapping the device onto a test volunteer who will perform the tracked activities at a normal/regular pace. This is done to ensure that the device can 				work under normal scenarios.
 
-	\item{\textbf{MTT\_2: Slow Movement} \\}
+	\item{\textbf{MTT\_2: Slow Movement} \\}\label{MTT2}
 	
 		Control: Manual 
 							
@@ -280,19 +290,17 @@ The following tests are run to ensure that the device is able to track activitie
 		
 		Output: Status returned by the Sensor Array is no error (BED\_ERR\_NONE).
 		
-		Test Case Derivation: N/A.
-							
 		How test will be performed: The test is performed by strapping the device onto a test volunteer who will perform the tracked activities at a very slow pace. This is done to ensure that the device can 						work under scenarios in which users have limited mobility.	
 
 \end{enumerate}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Device prompts user when activity is detected - \textbf{R3}}
+\subsubsection{Device prompts user when activity is detected}
 
 The following tests will be done to ensure that the proper info is prompted to the user when activities are detected. Tests involve generating the test prompt, generating prompts for different activities.
 		
 \paragraph{Prompt Tests}
 \begin{enumerate}
-	\item{\textbf{PT\_1: Test Prompt} \\}
+	\item{\textbf{PT\_1: Test Prompt} \\}\label{PT1}
 	
 		Control: Manual 
 							
@@ -301,12 +309,10 @@ The following tests will be done to ensure that the proper info is prompted to t
 		Input: Device is turned on for the first time.
 		
 		Output: Test Prompt is displayed.
-		
-		Test Case Derivation: N/A.
-							
+
 		How test will be performed: The test is performed by turning on the device for the first time after reconfiguration. Upon turning on the device, the user should receive a test prompt that will confirm that the 				prompting system is working correctly.
 
-	\item{\textbf{PT\_2: Activity Prompt} \\}
+	\item{\textbf{PT\_2: Activity Prompt} \\}\label{PT2}
 	
 		Control: Manual 
 							
@@ -315,20 +321,18 @@ The following tests will be done to ensure that the proper info is prompted to t
 		Input: Activity has been detected.
 		
 		Output: Specific activity prompt is displayed.
-		
-		Test Case Derivation: N/A.
 							
 		How test will be performed: The test is done by having a test volunteer perform one of the activities that are registered. This should result in a prompt for the volunteer that is generated based on the 					specific activity performed.
 \end{enumerate}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsubsection{Customizable Thresholds - \textbf{R5}}
+\subsubsection{Customizable Thresholds}
 
 The following tests will be done to ensure that the proper info is prompted to the user when activities are detected. Tests involve generating the test prompt, generating prompts for different activities.
 		
 \paragraph{Threshold Tests}
 \begin{enumerate}
-	\item{\textbf{TT\_1: Regular Inputs} \\}
+	\item{\textbf{TT\_1: Regular Inputs} \\}\label{TT1}
 	
 		Control: Manual 
 							
@@ -338,11 +342,9 @@ The following tests will be done to ensure that the proper info is prompted to t
 		
 		Output: Config File generated successfully.
 		
-		Test Case Derivation: N/A.
-							
 		How test will be performed: The test is performed by setting the device to configuration mode and then setting valid values for the thresholds.
 
-	\item{\textbf{TT\_2: Below lower limit} \\}
+	\item{\textbf{TT\_2: Below lower limit} \\}\label{TT2}
 	
 		Control: Manual 
 							
@@ -351,12 +353,10 @@ The following tests will be done to ensure that the proper info is prompted to t
 		Input: Values for thresholds below lower limits.
 		
 		Output: Config File generates a BED\_ERR\_OUT\_OF\_BOUNDS.
-		
-		Test Case Derivation: N/A.
-							
+
 		How test will be performed: The test is performed by setting the device to configuration mode and then setting values for the thresholds above allowable limits.
 
-	\item{\textbf{TT\_3: Above Upper limit }\\}
+	\item{\textbf{TT\_3: Above Upper limit }\\}\label{TT3}
 	
 		Control: Manual 
 							
@@ -366,11 +366,9 @@ The following tests will be done to ensure that the proper info is prompted to t
 		
 		Output: Config File generates a BED\_ERR\_OUT\_OF\_BOUNDS.
 		
-		Test Case Derivation: N/A.
-							
 		How test will be performed: The test is performed by setting the device to configuration mode and then setting values for the thresholds below allowable limits.
 
-	\item{\textbf{TT\_4: Invalid Value} \\}
+	\item{\textbf{TT\_4: Invalid Value} \\}\label{TT4}
 	
 		Control: Manual 
 							
@@ -380,11 +378,9 @@ The following tests will be done to ensure that the proper info is prompted to t
 		
 		Output: Config File generates a BED\_ERR\_INVALID\_DATA.
 		
-		Test Case Derivation: N/A.
-							
 		How test will be performed: The test is performed by setting the device to configuration mode and then setting invalid values for the thresholds.
 
-	\item{\textbf{TT\_5: No Value} \\}
+	\item{\textbf{TT\_5: No Value} \\}\label{TT5}
 	
 		Control: Manual 
 							
@@ -393,18 +389,16 @@ The following tests will be done to ensure that the proper info is prompted to t
 		Input: No values for thresholds.
 		
 		Output: Config File generates a BED\_ERR\_INVALID\_DATA.
-		
-		Test Case Derivation: N/A.
-							
+
 		How test will be performed: The test is performed by setting the device to configuration mode and then setting no values for the thresholds.
 \end{enumerate}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsubsection{Data Storage - \textbf{R6}}
+\subsubsection{Data Storage}
 
 The following tests will be done to ensure that data is stored when appropriate. Tests include checking when storage buffer is full, when prompts are generated and when sensor data needs to be logged. 
 \begin{enumerate}
-	\item{\textbf{DST\_1: Storage Buffer Full} \\}
+	\item{\textbf{DST\_1: Storage Buffer Full} \\}\label{DST1}
 	
 		Control: Manual 
 							
@@ -414,11 +408,9 @@ The following tests will be done to ensure that data is stored when appropriate.
 		
 		Output: Data Storage system generates a BED\_ERR\_MEMORY\_FULL
 		
-		Test Case Derivation: N/A.
-							
 		How test will be performed: The test is performed by first loading the internal memory buffer with garbage values so that it is nearly/completely full. Then a registered activity is triggered generating a 					prompt. Once this is answered, the system will not have enough memory to store the new values thus resulting in an error.
 
-	\item{\textbf{DST\_2: Prompt Generated} \\}
+	\item{\textbf{DST\_2: Prompt Generated} \\}\label{DST2}
 	
 		Control: Manual 
 							
@@ -428,11 +420,9 @@ The following tests will be done to ensure that data is stored when appropriate.
 		
 		Output: Prompt Response is saved into the internal memory.
 		
-		Test Case Derivation: N/A.
-							
 		How test will be performed: The test is performed by performing a registered activity and ensuring that the prompt generated is answered and its result is stored in the internal storage buffer.
 
-	\item{\textbf{DST\_3: Sensor Storage} \\}
+	\item{\textbf{DST\_3: Sensor Storage} \\}\label{DST3}
 	
 		Control: Manual 
 							
@@ -441,17 +431,15 @@ The following tests will be done to ensure that data is stored when appropriate.
 		Input: Activity detected causing prompt to be generated.
 		
 		Output: Specific sensor values that triggered a prompt are stored in the internal memory.
-		
-		Test Case Derivation: N/A.
 							
 		How test will be performed: The test is performed by performing a registered activity and ensuring that the sensor values that caused the prompt are stored in the internal storage buffer.
 \end{enumerate}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Data View - \textbf{R7}}
+\subsubsection{Data Extraction}
 
 The following tests will be done to ensure that can be extracted and presented in a graphical manner deemed acceptable for the purpose of EMA analysis.
 \begin{enumerate}
-	\item{\textbf{DVT\_1: Extracting Regular Data} \\}
+	\item{\textbf{DXT\_1: Extracting Regular Data} \\}\label{DXT1}
 	
 		Control: Manual 
 							
@@ -460,12 +448,10 @@ The following tests will be done to ensure that can be extracted and presented i
 		Input: Command that tells the device manager to extract all data from the internal memory.
 		
 		Output: Extracted data is sent to the Host Software where it is converted to a presentable form.
-		
-		Test Case Derivation: N/A.
-							
+
 		How test will be performed: The test is performed by first running the device as intended and waiting for a small monitoring period to finish. After this the device is connected to the Host Software with the 				help of the Device Manager Driver. Once connected, the user can start the extraction process and should be able to see all the relevant data in a presentable manner.
 
-	\item{\textbf{DVT\_2: Extracting No Data} \\}
+	\item{\textbf{DXT\_2: Extracting No Data} \\}\label{DXT2}
 	
 		Control: Manual 
 							
@@ -474,12 +460,10 @@ The following tests will be done to ensure that can be extracted and presented i
 		Input: Command that tells the device manager to extract all data from the internal memory.
 		
 		Output: Device Manager returns a BED\_ERR\_EMPTY\_DATA error
-		
-		Test Case Derivation: N/A.
-							
+
 		How test will be performed: The test is performed by first deleting all the contents of the internal memory prior to connection with the Host Software. Once connected and the extraction process begins, the 				system should return an error due to no data being present to extract.
 
-	\item{\textbf{DVT\_3: Extracting No Data} \\}
+	\item{\textbf{DXT\_3: Extracting No Data} \\}\label{DXT3}
 	
 		Control: Manual 
 							
@@ -488,9 +472,7 @@ The following tests will be done to ensure that can be extracted and presented i
 		Input: Command that tells the device manager to extract all data from the internal memory.
 		
 		Output: Device Manager returns a BED\_ERR\_INVALID\_DATA error
-		
-		Test Case Derivation: N/A.
-							
+
 		How test will be performed: The test is performed by first deleting all the contents of the internal memory and filling it with garbage values prior to connection with the Host Software. Once connected and 				the extraction process begins, the system should return an error due to corrupted data being present to extract.
 \end{enumerate}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
