--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -30,8 +30,7 @@
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Notes\\
-Date 2 & 1.1 & Notes\\
+November 2nd, 2022 & 1.0 & Initial Documentation\\
 \bottomrule
 \end{tabularx}
 
@@ -74,25 +73,44 @@ This document ... \wss{provide an introductory blurb and roadmap of the
 
 \subsection{Summary}
 
-\wss{Say what software is being tested.  Give its name and a brief overview of
-  its general functions.}
+Researchers at the School of Rehabilitation Sciences (SReS) at McMaster University are interested in performing Ecological Momentary Assessment (EMA) for victims of spinal disorders and back pain. EMA aims to study the thoughts, experiences, and behaviours of a participant's daily life by repeatedly collecting data in an individual's normal environment, at or close to the time they carry out that behaviour.\\
+
+The type of EMA that the SReS is interested in is focused on analyzing the daily activities and symptoms of mostly-older adults with mobility and spinal issues. They wish to track that participant's walking activity as they go about their daily life, along with prompting participants with questions when relevant events occur. The answers to event-based prompts will be combined with activity monitoring data to form a better picture about the experience this participant has with their spinal and mobility issues.\\
+
+The [name of device] will perform EMA analysis in a manner which even older participants can use, integrated into one package which gathers relevant data about a participant's activities and allows them to easily report what is currently going on and how they feel. They also are looking for a way to access EMA data in various ways. This includes graphical representations of the data which are meaningful to researchers, along with the raw data itself. This data could be activity data, symptoms reporting data, both types of data collated together, and so on. \\
+
+This document is intended to describe the plan for verification and validation of the device. Here, verification and validation are both technical terms with very specific meanings.\\
+
+Verification involves checking whether or not the specifications which were described in the planning phase of the project are implemented correctly by the final system designed. Validation involves checking whether or not the product actually fulfills the needs of the end user of the device. In the words of Barry Boehm, verification asks, "Are we building the product right?" and validation asks, "Are we building the right product?".\cite{pham_1999}
 
 \subsection{Objectives}
 
-\wss{State what is intended to be accomplished.  The objective will be around
-  the qualities that are most important for your project.  You might have
-  something like: ``build confidence in the software correctness,''
-  ``demonstrate adequate usability.'' etc.  You won't list all of the qualities,
-  just those that are most important.}
+The objectives aimed to be accomplished by this verification and validation are to:
+
+\begin{itemize}
+\item Validate if user requirements truly represent the goals of the stakeholders of [name of device].
+\item Validate if the input provided by the operators of [name of device] meet the established rules and constraints.
+\item Verify if the high-level design of the device correctly fulfills the specifications of the functional and non-functional requirements.
+\item Verify if the components of the device (e.g. source code, database, physical construction, user interface, etc.) fulfill the specifications of the design. 
+\item Discover any faults, failures, or malfunctions in the [name of device].
+\end{itemize}
 
 \subsection{Relevant Documentation}
 
+Please refer to the following documentation for reference and more information:
 \wss{Reference relevant documentation.  This will definitely include your SRS
   and your other project documents (design documents, like MG, MIS, etc).  You
   can include these even before they are written, since by the time the project
   is done, they will be written.}
-
-\citet{SRS}
+\begin{itemize}
+\item Development Plan: \citet{Development_Plan}
+\item Problem Statement \& Goals: \citet{Prob_n_Goals}
+\item SRS: \citet{SRS}
+\item Hazard Analysis: \citet{Hazard_Analysis}
+\item VnV Plan: \citet{VnV_Plan}
+\item Reflection: \citet{Reflection}
+\item User Guide: \citet{User_Guide}
+\end{itemize}
 
 \section{Plan}
 
