updated revision history

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -30,7 +30,7 @@
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-November 2nd, 2022 & 1.0 & Initial Documentation\\
+2022-11-02 & 1.0 & Initial Documentation\\
 \bottomrule
 \end{tabularx}
 
