Added SRS verification initial version

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -122,17 +122,30 @@ Verification and Validation plan will be done on both the hardware and software 
 
 \subsection{SRS Verification Plan}
 
-\wss{List any approaches you intend to use for SRS verification.  This may include
-  ad hoc feedback from reviewers, like your classmates, or you may plan for
-  something more rigorous/systematic.}
-
-\wss{Maybe create an SRS checklist?}
-
-The SRS verification plan will follow a strict checklist for Functional and Non-functional requirements. The Non-functional requirements are important for SRS verification as requirements such as safety and comfort have to be taken into account for participants who will be wearing the device. The SRS verification plan will also involve an ad hoc feedback approach. This is to make sure all the requirements and goals receive several test-cases that could help with the SRS verification plan. 
-
-Checklist for SRS verification Plan:
+The SRS verification plan will follow a checklist based on task inspection for the SRS and will also involve an ad hoc feedback approach. This is to make sure all the requirements and goals receive several test-cases that could help with the SRS verification plan. The checklist provided below is for sections of the SRS that are vital which require feedback for the product to function as required.
 
 
+\begin{center}
+\begin{tabular}{|p{3cm}|p{8cm}|p{4cm}|} 
+
+  \hline
+  \textbf{Section of SRS}     & \textbf{Description}           & \textbf{Approach of Feedback}                                                                                                                                                                       
+  \\
+  \hline
+  General feedback and discussion & The verification will be done for the entire SRS by going through it section by section and making sure it is correct. This will be based on an ad hoc approach.               & Will be done by team member Oliver Foote, Stakeholder Dr Luciana Macedo and classmates. \\
+  \hline
+  General System Description 4.1-4.3  & The verification for this section would be checking if System constrains and user characteristics are provided in detail without any ambiguity.                & Will be done by team member Jonathan Hai.                                                                                                             \\
+  \hline
+  Section 5 Definitions and variables     & Verifying if terminology and the use of monitored and controlled variables is consistent and correct. Assumptions are clearly mentioned and provided along with goals of the project.        & Will be done by team member  Nish Shah.\\
+  \hline
+  Required behavior and Requirements       & Validation of Functional and Non-functional requirements and to verify if the requirements are classified correctly. Checking required behavior as well.       & Will be done by team member Anish Rangarajan.                                                                                         \\
+  \hline
+  Section 8-12 Traceability matrices and normal operation      & Verification of matrices and graphs according to Requirements and also verifying if normal operation covers the required goals of the device. & Will be done by team member Labeeb Zaker.\\
+  \hline
+  Section 14-16        & Verification of FSM, Legal factors and Phase in Plan.       & Will be done by team member Jessica bae.                                                          \\
+  \hline
+\end{tabular}
+  \end{center}
 
 \subsection{Design Verification Plan}
 
